# dewdl

./: .cz-config.js  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
dewdl/: __init__.py  __main__.py  _dewdl_configs.py
dewdl/_cli/: _cli_main.py  _config_interface.py
dewdl/cli/: config.py  main.py
dewdl/enums/: __init__.py  _udl_base_data_type.py  _udl_data_mode.py  _udl_date_fields.py  _udl_environment.py  _udl_filedrop_type.py  _udl_query_type.py  _udl_request_error_code.py  _udl_request_success_code.py  _udl_secure_message_topic.py  _udl_secure_message_type.py
dewdl/exceptions/: __init__.py  _udl_key_error.py  _udl_request_error.py
dewdl/models/: __init__.py  _elset.py  _notification.py  _sms_response.py  _topic_description.py
dewdl/models/elsets/: __init__.py  _base_elset.py  _dnd_elset.py
dewdl/models/notifications/: __init__.py  _base_notification.py  _dnd_near_geo_body.py  _dnd_near_geo_notification.py
dewdl/requests/: __init__.py  _udl_filedrop.py  _udl_httpx_request.py  _udl_query.py  _udl_request.py  _udl_secure_message.py  udl_request_payload.py
dewdl/udl_actions/: __init__.py  _udl_base_action.py  _udl_filedrop.py  _udl_get_file.py  _udl_get_tuple.py  _udl_query.py  _udl_request.py.bck  _udl_secure_message.py  _udl_sms_base_action.py
scripts/: set_pip_configuration.sh  setup_python_environment.sh  update_project.py
tests/: conftest.py
tests/exceptions/: test_udl_request_error.py
tests/models/: test_notification.py
tests/models/elsets/: test_dnd_elset.py
tests/models/notifications/: test_dnd_near_geo_notification.py
tests/requests/: test_udl_query.py  test_udl_request.py  test_udl_secure_message.py
tests/unit/: conftest.py
tests/unit/exceptions/: test_udl_request_error.py
tests/unit/models/: test_elset.py
tests/unit/requests/: test_udl_query.py  test_udl_request.py  test_udl_secure_message.py
tests/unit/test_data/certs/: test_cert.pem  test_key.pem
