[project]
name = "dewdl"
version = "0.2.1"
description = "Request and data manager for interfacing with the UDL"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Brandon Sexton", email = "bsexton@icr-team.com" }]
dependencies = ["appdirs", "requests", "pydantic"]

[project.optional-dependencies]
dev = [
  "black",
  "pre-commit",
  "isort",
  "mypy",
  "flake8",
  "flake8-pytest-style",
  "dewdl[test]",
]
test = ["pytest", "pytest-cov", "mockito"]
build = ["build"]
docs = ["sphinx", "sphinx-autodoc-typehints", "sphinx-markdown-builder"]
deploy = ["twine"]

[project.scripts]
dewdl = "dewdl._cli._cli_main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
force-exclude = '''
^/(
  (
      \.eggs
    | \.git
    | \.pytest_cache
    | \.tox
    | dist
    | data
  )/
)
'''

[tool.isort]
profile = "black"
filter_files = true
line_length = 120
skip = ["__init__.py"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = [
  "--cov=dewdl",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--cov-branch",
  "--import-mode=importlib",
]

[tool.coverage.run]
omit = ["tests/*", "__init__.py"]
